gap bag fixed

--- a/style/gift-style.css
+++ b/style/gift-style.css
@@ -4,13 +4,10 @@ body {
     font: 400 16px/1.5em "Popins", sans-serif;
 }
 .page-content {
-    /*max-width: 700px;*/
-    /* margin: 32px auto; */
-    padding: 16px 32px 64px 32px;
+    padding: 16px 32px;
     background: #fff;
 }
 a {
-    margin: 15px 0;
     color: inherit; 
     text-decoration: inherit;
     position: absolute;
@@ -18,23 +15,16 @@ a {
     height: 100%;
     z-index: 1;
 }
-
-
-
 .tabbed {
-    margin: 32px 0;
-    padding-bottom: 16px;
-    /*border-bottom: 1px solid #ccc;*/
+    border-bottom: 1px solid #ccc;
 }
 
 .tabbed [type="radio"] {
-    /* hiding the inputs */
     display: none;
 }
 
 .tabs {
     display: flex;
-    align-items: stretch;
     flex-wrap: wrap;
     list-style: none;
     padding: 0;
@@ -44,7 +34,6 @@ a {
     z-index: 10;
 }
 .tab{
-
     flex: 1 0 100px;
 }
 .tab > label {
@@ -71,7 +60,6 @@ a {
     color: #777;
 }
 
-
 .tabbed [type="radio"]:nth-of-type(1):checked ~ .tabs .tab:nth-of-type(1) label,
 .tabbed [type="radio"]:nth-of-type(2):checked ~ .tabs .tab:nth-of-type(2) label,
 .tabbed [type="radio"]:nth-of-type(3):checked ~ .tabs .tab:nth-of-type(3) label,
@@ -92,7 +80,7 @@ a {
 .tabbed [type="radio"]:nth-of-type(6):checked ~ .tab-content:nth-of-type(6) {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    gap: clamp(10px, 5%, 30px);
+    gap: clamp(10px, 5vw, 30px);
 
 }
 img{
